Fixed illogical spacing

--- a/src/styles/VerticalList.module.css
+++ b/src/styles/VerticalList.module.css
@@ -109,7 +109,7 @@
 }
 
 .vpopular {
-  width: 100px;
+  width: 110px;
   display: flex;
   flex-direction: column;
 }
